--- a/public/forum/post.html
+++ b/public/forum/post.html
@@ -38,8 +38,8 @@
     <section class="nav_section">
         <div class="nav_content container">
             <nav class=nav_menu>
-                <span onclick="navegation('home.html')" class="item_menu">Feed</span>
-                <span class="item_menu">Notícias</span>
+                <span onclick="navegation('home.html')" class="item_menu">Fórum</span>
+                <span onclick="navegation('news.html')" class="item_menu">Notícias</span>
             </nav>
             <div class="pesquisa_container">
                 <i class="fa-solid fa-magnifying-glass"></i>
@@ -84,6 +84,7 @@
             <ul class="list_footer">
                 <li class="title_list">Navegação</li>
                 <li><a href="home.html" class="link_footer">Home</a></li>
+                <li><a href="news.html" class="link_footer">Notícias</a></li>
                 <li><a onclick="navegation('profile.html')" class="link_footer">Perfil</a></li>
             </ul>
             <ul class="list_footer">
