--- a/public/forum/news.html
+++ b/public/forum/news.html
@@ -40,13 +40,9 @@
     <section class="nav_section">
         <div class="nav_content container">
             <nav class=nav_menu>
-                <span onclick="navegation('home.html')" class="item_menu">Fórum</span>
-                <span class="item_menu menu_active">Notícias</span>
+                <span onclick="navegation('home.html')" class="item_menu"><i class="fa-solid fa-comment-dots"></i> Fórum</span>
+                <span onclick="navegation('news.html')" class="item_menu menu_active"><i class="fa-solid fa-newspaper"></i> Notícias</span>
             </nav>
-            <div class="pesquisa_container">
-                <i class="fa-solid fa-magnifying-glass"></i>
-                <input type="text" placeholder="Pesquisar...">
-            </div>
         </div>
     </section>
 
