--- a/public/forum/profile.html
+++ b/public/forum/profile.html
@@ -143,7 +143,7 @@
             </div>
             <ul class="list_footer">
                 <li class="title_list">Navegação</li>
-                <li><a href="home.html" class="link_footer">Home</a></li>
+                <li><a href="home.html" class="link_footer">Fórum</a></li>
                 <li><a href="news.html" class="link_footer">Notícias</a></li>
                 <li><a onclick="navegation('profile.html')" class="link_footer">Perfil</a></li>
             </ul>
