--- a/public/forum/news.html
+++ b/public/forum/news.html
@@ -68,7 +68,7 @@
             </div>
             <ul class="list_footer">
                 <li class="title_list">Navegação</li>
-                <li><a href="home.html" class="link_footer">Home</a></li>
+                <li><a href="home.html" class="link_footer">Fórum</a></li>
                 <li><a href="news.html" class="link_footer">Notícias</a></li>
                 <li><a onclick="navegation('profile.html')" class="link_footer">Perfil</a></li>
             </ul>
@@ -113,7 +113,7 @@
 
 
     function getNoticias() {
-        fetch('https://newsapi.org/v2/everything?q=voleibol&language=pt&sortBy=publishedAt&apiKey=58d19560e8ea40edb645bdefe0fe5b7a')
+        fetch('https://newsapi.org/v2/everything?q=vôlei&language=pt&sortBy=publishedAt&apiKey=58d19560e8ea40edb645bdefe0fe5b7a')
             .then(async function (response) {
                 const data = await response.json()
 
