feat: Adicionado o ícone da logo na barra do navegador para todas as páginas do site

--- a/public/forum/dashboard.html
+++ b/public/forum/dashboard.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="../css/headerForum.css">
     <link rel="stylesheet" href="../css/dashboard.css">
     <link rel="stylesheet" href="../css/footer.css">
+    <link rel="icon" href="../assets/img/logo_icon.png" type="image/png">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="../js/sessao.js"></script>
-    <title>Document</title>
+    <title>Estatísticas</title>
 </head>
 
 <body onload="obterDadosGrafico()">
@@ -112,7 +113,7 @@
             </div>
         </div>
         <div class="bottom_footer">
-            <p>©2024 - Vôlei como estilo de vida</p>
+            <p>©2024 Voleibol - Estilo de vida</p>
         </div>
     </footer>
 </body>
