--- a/public/forum/news.html
+++ b/public/forum/news.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Notícias</title>
     <link rel="stylesheet" href="../css/headerForum.css">
     <link rel="stylesheet" href="../css/modal.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/alertMsg.css">
     <link rel="stylesheet" href="../css/loader.css">
     <link rel="stylesheet" href="../css/news.css">
+    <link rel="icon" href="../assets/img/logo_icon.png" type="image/png">
 
     <script src="../js/sessao.js"></script>
 </head>
@@ -90,7 +91,7 @@
             </div>
         </div>
         <div class="bottom_footer">
-            <p>©2024 - Vôlei como estilo de vida</p>
+            <p>©2024 Voleibol - Estilo de vida</p>
         </div>
     </footer>
 </body>
