--- a/public/forum/profile.html
+++ b/public/forum/profile.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/alertMsg.css">
     <link rel="stylesheet" href="../css/loader.css">
+    <link rel="icon" href="../assets/img/logo_icon.png" type="image/png">
     <script src="../js/sessao.js"></script>
-    <title>Document</title>
+    <title>Perfil</title>
 </head>
 
 <body onload="atualizarDadosUsuario()">
@@ -165,7 +166,7 @@
             </div>
         </div>
         <div class="bottom_footer">
-            <p>©2024 - Vôlei como estilo de vida</p>
+            <p>©2024 Voleibol - Estilo de vida</p>
         </div>
     </footer>
 </body>
