--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/footer.css">
+    <link rel="icon" href="./assets/img/logo_icon.png" type="image/png">
 </head>
 
 <body>
@@ -75,7 +76,7 @@
             </div>
             <div class="img_flex flex3">
                 <div class="gradient">
-                    <p>COMPANHERISMO</p>
+                    <p>COMPANHEIRISMO</p>
                 </div>
             </div>
         </div>
@@ -133,7 +134,7 @@
             </div>
         </div>
         <div class="bottom_footer">
-            <p>©2024 - Vôlei como estilo de vida</p>
+            <p>©2024 Voleibol - Estilo de vida</p>
         </div>
     </footer>
     <!-- </main> -->
@@ -161,7 +162,7 @@
                 <b>Oposto(2):</b> Jogador que fica na posição oposta ao levantador e é o principal responsável por marcar pontos.<br>
                 <b>Pontas(1,4):</b> Jogadores que atacam pelas laterais da rede. Geralmente são rápidos e eficientes em ataques variados.<br>
                 <b>Meio de rede(3):</b> Estes jogadores atuam próximo à rede e têm a função de bloquear os ataques adversários, além de atacar quando necessário. São frequentemente os jogadores mais altos do time.<br>
-                <b>Líbero(6):</b> Especializado em defesa e recepção, usa uma camisa de cor diferente e tem algumas restrições de ataque`
+                <b>Líbero(6):</b> Especializado em defesa e recepção, usa uma camisa de cor diferente e tem algumas restrições de ataque.`
             },
             {
                 img: 'olimpiadas-2016.jpg',
