--- a/public/login.html
+++ b/public/login.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./css/login_cadastro.css">
     <link rel="stylesheet" href="./css/alertMsg.css">
     <link rel="stylesheet" href="./css/loader.css">
-    <title>Document</title>
+    <link rel="icon" href="./assets/img/logo_icon.png" type="image/png">
+    <title>Entrar</title>
 </head>
 
 <body>
