Correção no texto descricao do modal de editar postagem

--- a/public/forum/profile.html
+++ b/public/forum/profile.html
@@ -113,7 +113,7 @@
             <div class="form_post">
                 <label>Assunto:</label>
                 <input id="input_assunto" type="text" name="assunto">
-                <label>Descricao:</label>
+                <label>Descrição:</label>
                 <textarea id="input_descricao" type="" name="descricao" rows="10" cols="50"> </textarea>
                 <div id="btn_content">
                     <button onclick="editar()" class="btn_insert_post">SALVAR ALTERAÇÕES</button>
