--- a/public/forum/home.html
+++ b/public/forum/home.html
@@ -142,7 +142,7 @@
     var idUsuario = sessionStorage.ID_USUARIO;
     var fotoPerfil = sessionStorage.FOTO_PERFIL
 
-    if (fotoPerfil != '') {
+    if (fotoPerfil == '') {
         foto_perfil_header.style.backgroundImage = `url(../assets/profiles_img/${fotoPerfil})`
     } else {
         foto_perfil_header.style.backgroundImage = `url(../assets/img/user_profiel_image.png)`
@@ -427,10 +427,10 @@
     }
 
     function getNoticias() {
-        fetch('https://newsapi.org/v2/everything?q=vôlei&language=pt&pageSize=2&sortBy=publishedAt&apiKey=58d19560e8ea40edb645bdefe0fe5b7a')
+        fetch(`/noticias/listarPorQuantidade/${2}`, { cache: 'no-store' })
             .then(async function (response) {
                 const data = await response.json()
-
+                console.log(data)
                 const noticias = [];
 
                 data.articles.map(item => {
