Alteração na validação de icone de perfil da header do forum

--- a/public/forum/home.html
+++ b/public/forum/home.html
@@ -142,7 +142,7 @@
     var idUsuario = sessionStorage.ID_USUARIO;
     var fotoPerfil = sessionStorage.FOTO_PERFIL
 
-    if (fotoPerfil == '') {
+    if (fotoPerfil != '') {
         foto_perfil_header.style.backgroundImage = `url(../assets/profiles_img/${fotoPerfil})`
     } else {
         foto_perfil_header.style.backgroundImage = `url(../assets/img/user_profiel_image.png)`
